--- a/DataGatherer/DataGatherer.csproj
+++ b/DataGatherer/DataGatherer.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.72" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="OutputData\" />
+  </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+
 </Project>
