Updating readme and App.Config to use Env Variables

--- a/FootballStatisticsEngine/App.config
+++ b/FootballStatisticsEngine/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="connectionString" value="Your_Connection_String" />
+    <add key="connectionString" value="env:FOOTBALL_DATABASE_CONNECTION_STRING" />
   </appSettings>
 </configuration>
